# backend/openapi.json
@@ -128,16 +128,34 @@
         }
       }
     },
+    "/api/v1/users" : {
+      "get" : {
+        "tags" : [ "user-controller" ],
+        "operationId" : "list",
+        "responses" : {
+          "200" : {
+            "description" : "OK",
+            "content" : {
+              "*/*" : {
+                "schema" : {
+                  "type" : "object"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/v1/user/{username}" : {
       "get" : {
         "tags" : [ "user-controller" ],
         "operationId" : "read",
         "parameters" : [ {
-          "name" : "username",
-          "in" : "path",
+          "name" : "request",
+          "in" : "query",
           "required" : true,
           "schema" : {
-            "type" : "string"
+            "$ref" : "#/components/schemas/ReadRequest"
           }
         } ],
         "responses" : {
@@ -367,10 +385,10 @@
       "AuthenticationExtensionsClientInput" : {
         "type" : "object",
         "properties" : {
-          "input" : { },
           "extensionId" : {
             "type" : "string"
-          }
+          },
+          "input" : { }
         }
       },
       "AuthenticationExtensionsClientInputs" : {
@@ -531,6 +549,16 @@
           }
         },
         "required" : [ "password", "username" ]
+      },
+      "ReadRequest" : {
+        "type" : "object",
+        "properties" : {
+          "username" : {
+            "type" : "string",
+            "minLength" : 1
+          }
+        },
+        "required" : [ "username" ]
       },
       "ReadResponse" : {
         "type" : "object",
