# backend/src/main/java/com/nickmous/beanstash/controller/dto/user/request/ReadRequest.java
@@ -1,8 +1,9 @@
 package com.nickmous.beanstash.controller.dto.user.request;
 
 import jakarta.validation.constraints.NotBlank;
+import org.springframework.web.bind.annotation.PathVariable;
 
 public record ReadRequest (
-    @NotBlank String username
+    @NotBlank @PathVariable String username
 ) {
 }
